# streams-rs

./: Cargo.toml  README.md
examples/: counter.rs
src/: fn_stream.rs  io_stream.rs  lib.rs
